crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_inherited_parameter_defaults.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ inherited_parameter_defaults: true, ..InlayHintSettings::none() })"
---

class A:
    def f(self, a=1, b: str = 'x', c=None, d=[], e=2) -> None: ...

class B(A):
    def f(self, a[=1], b: str[ = "x"], c[=None], d, e=3) -> None: ...

class C:
    def f(self, a) -> None: ...
