crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_inherited_parameter_types_from_overloads.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ inherited_parameter_types: true, ..InlayHintSettings::none() })"
---

from typing import overload

@overload
def f(a: int) -> int: ...
@overload
def f(a: str) -> str: ...
def f(a[: int | str]): ...
