crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_named_type_arguments.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{\n    variable_types: true, call_type_arguments: true, type_argument_names:\n    true, ..InlayHintSettings::none()\n})"
---

class Pair[Key, Value]:
    init(key: Key, value: Value)

class One[Element]:
    init(element: Element)

a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
b[: One[int]] = One[[1]](1)
c: dict[[Key=]str, [Value=]int] = {}

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
 --> main.by:2:7
  |
2 | class Pair[Key, Value]:
  |       ^^^^
  |
info: Source
 --> main2.py:8:5
  |
8 | a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
  |     ^^^^
  |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:14
   |
LL | a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
   |              ^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class str(Sequence[str]):
   |       ^^^
   |
info: Source
  --> main2.py:LL:25
   |
LL | a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
   |                         ^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:43
   |
LL | a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
   |                                           ^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class str(Sequence[str]):
   |       ^^^
   |
info: Source
  --> main2.py:LL:52
   |
LL | a[: Pair[Key=int, Value=str]] = Pair[[Key=1, Value="x"]](1, 'x')
   |                                                    ^^^
   |

info[inlay-hint-location]: Inlay Hint Target
 --> main.by:5:7
  |
5 | class One[Element]:
  |       ^^^
  |
info: Source
 --> main2.py:9:5
  |
9 | b[: One[int]] = One[[1]](1)
  |     ^^^
  |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:9
   |
LL | b[: One[int]] = One[[1]](1)
   |         ^^^
   |

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
   |
info: Source
  --> main2.py:LL:22
   |
LL | b[: One[int]] = One[[1]](1)
   |                      ^
   |

---------------------------------------------
info[inlay-hint-edit]: Inlay hint edits
--> main.by:1:1
   |
7  |
   - a = Pair(1, 'x')
   - b = One(1)
8  + a: Pair[Key=int, Value=str] = Pair(1, 'x')
9  + b: One[int] = One(1)
10 | c: dict[str, int] = {}
   |
