crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_numeric_promotions_are_not_hinted.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{ numeric_promotions: true, ..InlayHintSettings::none() })"
---

def f(x: float, y: complex) -> None: ...
