crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_some_holes_are_not_hinted.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{\n    call_type_arguments: true, type_argument_names: true,\n    ..InlayHintSettings::none()\n})"
---

def echo(s: some str) -> s:
    return s

def pair[Element](s: some str, e: Element) -> Element:
    return e

a = echo('lit')
b = pair[[1]]('lit', 1)

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
info: Source
  --> main2.py:LL:11
   |
LL | b = pair[[1]]('lit', 1)
   |           ^
