crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_type_arguments_unnamed_with_the_setting_off.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{\n    variable_types: true, call_type_arguments: true,\n    ..InlayHintSettings::none()\n})"
---

class Pair[Key, Value]:
    init(key: Key, value: Value)

a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
 --> main.by:2:7
  |
2 | class Pair[Key, Value]:
  |       ^^^^
info: Source
 --> main2.py:5:5
  |
5 | a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')
  |     ^^^^

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
info: Source
  --> main2.py:LL:10
   |
LL | a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')
   |          ^

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class str(Sequence[str]):
   |       ^^^
info: Source
  --> main2.py:LL:13
   |
LL | a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')
   |             ^^^

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
info: Source
  --> main2.py:LL:27
   |
LL | a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')
   |                           ^

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class str(Sequence[str]):
   |       ^^^
info: Source
  --> main2.py:LL:30
   |
LL | a[: Pair[1, "x"]] = Pair[[1, "x"]](1, 'x')
   |                              ^^^

---------------------------------------------
info[inlay-hint-edit]: Inlay hint edits
--> main.by:1:1
  |
4 |
  - a = Pair(1, 'x')
5 + a: Pair[1, "x"] = Pair(1, 'x')
  |
