crates/ty_ide/src/snapshots/ty_ide__inlay_hints__tests__basedpython_type_display.snap
---
source: crates/ty_ide/src/inlay_hints.rs
expression: "test.inlay_hints_with_settings(&InlayHintSettings\n{\n    variable_types: true, call_type_arguments: true, revealed_types: true,\n    ..InlayHintSettings::none()\n})"
---

def identity[T](x: T) -> T:
    return x

a[: 1] = identity[[1]](1)
b = (1, 'two')
reveal_type(a)[  revealed: 1]

---------------------------------------------
info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
info: Source
  --> main2.py:LL:5
   |
LL | a[: 1] = identity[[1]](1)
   |     ^

info[inlay-hint-location]: Inlay Hint Target
  --> stdlib/builtins.byi:LL:7
   |
LL | class int:
   |       ^^^
info: Source
  --> main2.py:LL:20
   |
LL | a[: 1] = identity[[1]](1)
   |                    ^

---------------------------------------------
info[inlay-hint-edit]: Inlay hint edits
--> main.by:1:1
  |
4 |
  - a = identity(1)
5 + a: 1 = identity(1)
6 | b = (1, 'two')
  |
